+ #fix Menu styles on dark mode

--- a/app/components/Menu/menu.scss
+++ b/app/components/Menu/menu.scss
@@ -1,21 +1,22 @@
 .menu__block {
+  z-index: 990;
   position: absolute;
-  width: 800px;
-  background-color: #fff;
   top: 46px;
-  //right: -8px;
+  right: 16px;
+  width: 800px;
   padding: 12px 24px 0;
+
+  background-color: #fff;
   border-radius: 5px;
   cursor: default;
-  z-index: 990;
-  right: 16px;
 
   box-shadow: 0 8px 17px 2px rgba(0, 0, 0, .14);
   transition: .3s;
 }
 
 .dark-mode .menu__block {
-  background-color: #424242 !important;
+  background-color: #1b2938;
+  border: 1px solid #3e4852;
 }
 
 @media only screen and (max-width: 992px) {
